--- a/frontend/src/styles/scss/components/_chat.scss
+++ b/frontend/src/styles/scss/components/_chat.scss
@@ -14,6 +14,9 @@
   padding-top: 50px!important;
 	form {
 		display: flex;
+    input {
+      color: black;
+    }
 	}
 	ul {
     list-style-type: none;
