--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -492,6 +492,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
   overflow: hidden;
   background-image: url("../../../public/img/backMenu.gif");
   background-size: cover;
@@ -586,6 +587,9 @@ nav menu li a:hover {
 .chat-box form {
   display: flex;
 }
+.chat-box form input {
+  color: black;
+}
 .chat-box ul {
   list-style-type: none;
   overflow: auto;
@@ -668,31 +672,32 @@ nav menu li a:hover {
   width: 220px;
 }
 
-.game-box {
+#root {
+  height: 100%;
+}
+#root .game-box {
   background: url("../../../public/img/background.png");
   background-size: cover;
   width: 100%;
-  height: 788px;
+  height: 100%;
   position: relative;
-  background-position: -5800px center;
   display: flex;
-  margin: auto auto;
   user-select: none;
   cursor: url("../../../public/img/251.png"), auto;
 }
-.game-box .hero {
+#root .game-box .hero {
   position: relative;
   background-color: transparent;
   display: flex;
   user-select: none;
 }
-.game-box .enemy {
+#root .game-box .enemy {
   position: absolute;
   background-color: transparent;
   display: flex;
   user-select: none;
 }
-.game-box .bullet {
+#root .game-box .bullet {
   width: 28px;
   height: 4px;
   background-color: rgba(255, 179, 2, 0.863);
@@ -700,7 +705,7 @@ nav menu li a:hover {
   box-shadow: 0px 0px 5px 5px rgb(181, 25, 25);
   position: absolute;
 }
-.game-box .coin {
+#root .game-box .coin {
   position: absolute;
   background-color: transparent;
   display: flex;
