fix white flicker

--- a/frontend/src/styles/scss/common/_index.scss
+++ b/frontend/src/styles/scss/common/_index.scss
@@ -1,8 +1,8 @@
-@import  './fonts';
+// @import  './fonts';
 // @import './reset';
-@import './normalize.scss';
+// @import './normalize.scss';
 @import './variables.scss';
 @import './extends.scss';
-@import './mixins.scss';
+// @import './mixins.scss';
 @import './anumation.scss';
 @import './common.scss';
