--- a/frontend/src/styles/scss/common/_extends.scss
+++ b/frontend/src/styles/scss/common/_extends.scss
@@ -1,7 +1,7 @@
 %auth-box {
 	display: flex;
 	flex-direction: column;
-	width: $widthMenu;
+	width: $widthAuth;
 	white-space: nowrap;
 	gap: 30px;
 	padding-top: 50px !important;
