--- a/frontend/src/styles/scss/common/_variables.scss
+++ b/frontend/src/styles/scss/common/_variables.scss
@@ -2,4 +2,5 @@ $colorBlue: #185875;
 $colorYellow: #ce9e00;
 $backgroundColorBox: #121410da;
 $textHover: #ecbb15;
-$widthMenu: 700px;
+$widthMenu: 500px;
+$widthAuth: 700px;
