--- a/frontend/src/styles/css/index.css
+++ b/frontend/src/styles/css/index.css
@@ -136,13 +136,13 @@ nav menu {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px !important;
+  padding: 30px !important;
   gap: 20px;
-  width: 700px;
+  width: 500px;
 }
 nav menu li {
-  line-height: 2.5em;
-  font-size: 1.5em;
+  line-height: 2.1em;
+  font-size: 1.7em;
   text-shadow: rgb(110, 110, 110) 0px 1px 0px, rgb(110, 110, 110) 0px 2px 0px, rgba(0, 0, 0, 0.5) 0px 3px 1px, rgba(0, 0, 0, 0.5) 0px 4px 3px;
 }
 nav menu li a {
@@ -299,8 +299,14 @@ nav menu li a:hover {
   user-select: none;
   cursor: url("../../../public/img/251.png"), auto;
 }
+#root .game-box .hand {
+  position: absolute;
+  background-color: transparent;
+  display: flex;
+  user-select: none;
+}
 #root .game-box .hero {
-  position: relative;
+  position: absolute;
   background-color: transparent;
   display: flex;
   user-select: none;
@@ -311,12 +317,24 @@ nav menu li a:hover {
   display: flex;
   user-select: none;
 }
+#root .game-box .blood {
+  position: absolute;
+  background-color: transparent;
+  display: flex;
+  user-select: none;
+}
+#root .game-box .dead-body {
+  position: absolute;
+  background-color: transparent;
+  display: flex;
+  user-select: none;
+}
 #root .game-box .bullet {
-  width: 28px;
-  height: 4px;
-  background-color: rgba(255, 179, 2, 0.863);
+  width: 12px;
+  height: 2px;
+  background-color: rgba(255, 234, 2, 0.735);
   border-radius: 30%;
-  box-shadow: 0px 0px 5px 5px rgb(181, 25, 25);
+  box-shadow: 0px 0px 5px 5px rgb(203, 159, 16);
   position: absolute;
 }
 #root .game-box .coin {
@@ -449,6 +467,8 @@ nav menu li a:hover {
   margin-bottom: 10px;
 }
 .settings-box .settings-container-1 .edit-avatar span h1 {
+  padding-left: 15px;
+  padding-top: 25px;
   font-size: 120px;
   font-weight: 300;
   color: rgb(194, 194, 194);
