--- a/frontend/src/styles/scss/components/_game-menu.scss
+++ b/frontend/src/styles/scss/components/_game-menu.scss
@@ -6,12 +6,12 @@ nav {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		padding: 50px !important;
+		padding: 30px !important;
 		gap: 20px;
-		width: 700px;
+		width: $widthMenu;
 		li {
-			line-height: 2.5em;
-			font-size: 1.5em;
+			line-height: 2.1em;
+			font-size: 1.7em;
 			text-shadow: rgb(110, 110, 110) 0px 1px 0px, rgb(110, 110, 110) 0px 2px 0px,
 				rgba(0, 0, 0, 0.5) 0px 3px 1px, rgba(0, 0, 0, 0.5) 0px 4px 3px;
 			a {
