--- a/frontend/src/styles/scss/components/_settings.scss
+++ b/frontend/src/styles/scss/components/_settings.scss
@@ -53,6 +53,8 @@
 				align-items: center;
 				margin-bottom: 10px;
 				h1 {
+          padding-left: 15px;
+          padding-top: 25px;
 					font-size: 120px;
 					font-weight: 300;
 					color: rgb(194, 194, 194);
